fix: update css to fix small screen overflow (#310)

--- a/docs/overrides/stylesheets/adr.css
+++ b/docs/overrides/stylesheets/adr.css
@@ -25,7 +25,7 @@
     position: relative;
     border-radius: 100px;
     line-height: 1 !important;
-    overflow: hidden;
+    overflow: scroll;
     padding: 0px 12px 0px 20px;
     text-overflow: ellipsis;
     line-height: 1.25rem;
@@ -110,10 +110,12 @@
     max-width: 1000px;
 }
 
-.md-main {
-    flex-grow: 1;
-    margin-left: auto;
-    margin-right: auto
+@media only screen and (min-width: 1220px) {
+    .md-main {
+        flex-grow: 1;
+        margin-left: auto;
+        margin-right: auto
+    }
 }
 
 @media screen {
